--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
